// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.identity.users;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "personal-website-v2/go-apis/identity/users;users";

// Proto file describing the User.

// The user.
message User {
    // The unique ID to identify the user.
    uint64 id = 1;

    // Optional. The unique name to identify the user.
    google.protobuf.StringValue name = 2;

    // The user's type (account type).
    UserTypeEnum.UserType type = 3;

	// It stores the date and time at which the user was created.
    google.protobuf.Timestamp created_at = 4;

	// The user ID to identify the user who created this user.
    uint64 created_by = 5;

	// It stores the date and time at which the user was updated.
    google.protobuf.Timestamp updated_at = 6;

	// The user ID to identify the user who updated this user.
    uint64 updated_by = 7;

	// The user's status.
    UserStatus status = 8;

	// It stores the date and time at which the user's status was updated.
    google.protobuf.Timestamp status_updated_at = 9;

	// The user ID to identify the user who updated this user's status.
    uint64 status_updated_by = 10;

    // Optional. The user's status comment.
    google.protobuf.StringValue status_comment = 11;

    // Optional. The user's email.
    google.protobuf.StringValue email = 12;

    // Optional. The first sign-in time.
    google.protobuf.Timestamp first_sign_in_time = 13;

    // Optional. The first sign-in IP address.
    google.protobuf.StringValue first_sign_in_ip = 14;

    // Optional. The last sign-in time.
    google.protobuf.Timestamp last_sign_in_time = 15;

    // Optional. The last sign-in IP address.
    google.protobuf.StringValue last_sign_in_ip = 16;

    // Optional. The last sign-out time.
    google.protobuf.Timestamp last_sign_out_time = 17;

    // Optional. The last activity time.
    google.protobuf.Timestamp last_activity_time = 18;

    // Optional. The last activity IP address.
    google.protobuf.StringValue last_activity_ip = 19;
}

// Container for enum describing the user's type.
message UserTypeEnum {
    // The user's type (account type).
    enum UserType {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        USER = 1;
        SYSTEM_USER = 2;
    }
}

// The user's status.
enum UserStatus {
    // Unspecified. Do not use.
    USER_STATUS_UNSPECIFIED = 0;
    NEW = 1;
    PENDING_APPROVAL = 2;
    ACTIVE = 3;
    LOCKED_OUT = 4;
    TEMPORARILY_LOCKED_OUT = 5;
    DISABLED = 6;
    DELETING = 7;
    DELETED = 8;
}
